# truststack

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: database.md  getting-started.md  index.md
docs/api/: truststack-agent-clock.md  truststack-entity-canon.md  truststack-meta-token-vault.md  truststack-shipped-or-not.md  truststack-task-dedupe.md
docs/schemas/: truststack-entity-canon.sql  truststack-meta-token-vault.sql  truststack-shipped-or-not.sql  truststack-task-dedupe.sql
